Setup 'grandchild' custom refs and instructions for usage.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ js/javascript.min.js
 # these are easily recreated on a new project
 # with `npm install`
 node_modules/
+
+# ignore 'grandchild' customization files
+custom/*
